CHANGELOG
v3.0.0:
Internal Changes:
    Implement speedups in UnifiedConsensusMaker (requires Cython)
    Bump versions for a number of packages in the environment
    Modify depth plot summary script to enable large capture sets
    Split environment up to allow different requirements for different scripts
    Atomize variants prior to countMutsPerCycle.py

v2.1.2: 
Bugfix:
    Re-add pre variant calling checkpoint to fix non-functionality of rerun mode 1.
    Remove "ancient" keyword and snakemake version restriction to fix run problems on macOS X
    Fix issue in VCF generation where the same variant could appear multiple times
    
Internal Changes:
    Instead of removing families containing Ns or mononucleotide repeats in UMIs after all consensus making happened, do it before any consensus making hapens.  The tagstats output removes unchanged at this time; the only difference will be in the SSCS output, which will not contain reads with UMIs that contain Ns or mononucleotide repeats (it did previously).  
    Track number of N-containing UMIs in CM_stats file.  
    Modify rerun to check for file existance (depends on OS module from Python standard library; may not work identically on all systems).

v2.1.1: 
Bugfix:
    Fix issue where masking in countmuts file was not applied correctly

v2.1.0:
Bugfix:
    Fix spelling on some rule names
New Features:
    Populate log files, add missing log files, and normalize log file names
    Add '--keep-going' to snakemake command in run script, which allows for 
        the pipeline to continue to run independant steps if one step fails; 
        rerun setup script to take advantage of this.  

v2.0.1:
Bugfix: 
Fix a bug where providing a masking bed caused the pipeline to crash at DepthSummaryCsv.py

v2.0.0:
Bugfixes:
    Add definition of negative taxIDs to report.
    Fix bed blocks issue where terminal comma would cause crashes
    Fix table formating for countmuts and depth tables in report